[package]
name = "lhasher"
version = "0.1.0"
authors = ["Robin Syihab <robinsyihab@gmail.com>"]
edition = "2021"
description = "Data tokenizer & hasher"
repository = "https://github.com/lhasher"

[dependencies]
clap = "3.2"
sha2 = "0.10"
crc32fast = "1.3.2"
regex = "1.6"
lazy_static = "1.3"
nom-sql = { git = "https://github.com/anvie/nom-sql", branch = "master" }
