[package]
name = "lhasher"
version = "0.1.0"
authors = ["Robin Syihab <robinsyihab@gmail.com>"]
edition = "2021"
description = "Data tokenizer & hasher"
repository = "https://github.com/lhasher"
license = "MIT"

[lib]
name = "lhasher"
path = "src/lib.rs"

[[bin]]
name = "lhasher-cli"
path = "src/main.rs"

[dependencies]
clap = "3.2"
# lz_fnv = "0.1.2"
# crc32fast = "1.3.2"
regex = "1.6"
lazy_static = "1.3"
nom-sql = { git = "https://github.com/anvie/nom-sql", branch = "master" }
nom = "7.1"
lhash = { git = "https://github.com/anvie/lhash", branch = "master" }

